--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,10 @@ body {
   text-transform: uppercase;
 }
 
+button {
+  cursor: pointer;
+}
+
 .button {
   color: var(--primary-bg-color);
   background-color: var(--accent-color);
@@ -101,8 +105,6 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  /* display: flex;
-  align-items: center; */
   text-align: center;
   letter-spacing: 0.06em;
 }
@@ -140,7 +142,6 @@ body {
 }
 
 .feature-list p {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -167,7 +168,6 @@ body {
 }
 
 .team-list p {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
@@ -211,6 +211,13 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
+.address-postal:hover,
+.address-list .contact-info:hover,
+.address-postal:focus,
+.address-list .contact-info:focus {
+  color: var(--accent-color);
+}
+
 /* Портфоліо */
 
 /* Кнопки */
@@ -251,7 +258,6 @@ body {
 }
 
 .portfolio-sample-list p {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
