--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
   color: var(--primary-text-color);
   font-family: "Roboto", sans-serif;
   font-size: 14px;
-  letter-spacing: 00.03em;
+  letter-spacing: 0.03em;
 }
 
 /* Шапка */
@@ -55,8 +55,8 @@ body {
   color: var(--accent-color);
 }
 
-.site-nav .link:hover,
-.site-nav .link:focus {
+.site-nav .nav-link:hover,
+.site-nav .nav-link:focus {
   color: var(--accent-color);
 }
 
@@ -75,8 +75,8 @@ body {
   letter-spacing: 0.02em;
 }
 
-.contact .contact-link:hover,
-.contact .contact-link:focus {
+.contact-link:hover,
+.contact-link:focus {
   color: var(--accent-color);
 }
 
@@ -137,6 +137,7 @@ button {
 .feature-list-title {
   color: var(--title-text-color);
 
+  font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
 }
@@ -147,8 +148,7 @@ button {
 
 /* Спеціалізація та команда*/
 
-.specialization-title,
-.team-title {
+.section-title {
   color: var(--title-text-color);
 
   font-size: 36px;
