--- a/css/styles.css
+++ b/css/styles.css
@@ -227,7 +227,7 @@ button {
 
 /* Зразки проектів */
 
-.portfolio-sample-title {
+.portfolio-sample-list-title {
   color: var(--title-text-color);
 
   font-size: 18px;
@@ -235,7 +235,7 @@ button {
   letter-spacing: 0.06em;
 }
 
-.portfolio-sample-text {
+.portfolio-sample-list-text {
   font-size: 16px;
   line-height: 1.88;
 }
